pixlab/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\RHS\Documents\GitHub\PictureLab\pixlab
-d
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java
<---- end of javadoc command ---->
Loading source file C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java...
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:127: error: illegal start of expression
  public void mirrorVertical()
  ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:127: error: ';' expected
  public void mirrorVertical()
        ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:127: error: ';' expected
  public void mirrorVertical()
                              ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:145: error: illegal start of expression
  public void mirrorTemple()
  ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:145: error: illegal start of expression
  public void mirrorTemple()
         ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:145: error: ';' expected
  public void mirrorTemple()
                          ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:175: error: illegal start of expression
  public void copy(Picture fromPic, 
  ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:175: error: illegal start of expression
  public void copy(Picture fromPic, 
         ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:175: error: ';' expected
  public void copy(Picture fromPic, 
                  ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:175: error: <identifier> expected
  public void copy(Picture fromPic, 
                                   ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:176: error: not a statement
                 int startRow, int startCol)
                     ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:176: error: ';' expected
                 int startRow, int startCol)
                             ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:176: error: ';' expected
                 int startRow, int startCol)
                                           ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:200: error: illegal start of expression
  public void createCollage()
  ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:200: error: illegal start of expression
  public void createCollage()
         ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:200: error: ';' expected
  public void createCollage()
                           ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:220: error: illegal start of expression
  public void edgeDetection(int edgeDist)
  ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:220: error: illegal start of expression
  public void edgeDetection(int edgeDist)
         ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:220: error: ';' expected
  public void edgeDetection(int edgeDist)
                           ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:220: error: ';' expected
  public void edgeDetection(int edgeDist)
                                        ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:247: error: illegal start of expression
  public static void main(String[] args) 
  ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:247: error: illegal start of expression
  public static void main(String[] args) 
         ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:247: error: ';' expected
  public static void main(String[] args) 
               ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:247: error: '.class' expected
  public static void main(String[] args) 
                                   ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:247: error: ';' expected
  public static void main(String[] args) 
                                       ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:255: error: reached end of file while parsing
} // this } is the end of class Picture, put all new methods before this
 ^
C:\Users\RHS\Documents\GitHub\PictureLab\pixlab\Picture.java:256: error: reached end of file while parsing
27 errors
